fix: add more contrast to light theme

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,7 +10,7 @@
   --secondary-bg: #f0f0f0;
   --tertiary-bg: #cecece;
   --text-color: black;
-  --accent-color: #41adff;
+  --accent-color: #0077b8;
   color-scheme: light;
 }
 
